# ares

./: Cargo.toml
migrations/2020-07-13-034425_new_tables/: down.sql  up.sql
migrations/2020-07-13-192409_create_known_cells/: down.sql  up.sql
migrations/2020-07-14-064347_add_q_r_to_known_cells/: down.sql  up.sql
migrations/2020-07-17-223859_add_power_field/: down.sql  up.sql
migrations/2020-07-18-042146_remove_unused/: down.sql  up.sql
migrations/2020-07-18-045148_add_modules_table/: down.sql  up.sql
migrations/2020-07-20-201033_add_max_power_column/: down.sql  up.sql
migrations/2020-07-20-210209_create_valuables_table/: down.sql  up.sql
migrations/2020-07-21-064446_add_mined_amount/: down.sql  up.sql
migrations/2020-07-21-223350_add_valuables_in_cargo/: down.sql  up.sql
migrations/2020-07-22-054801_add_exfil_countdown/: down.sql  up.sql
migrations/2020-07-24-070951_add_hibernate_and_status/: down.sql  up.sql
migrations/2020-07-25-065955_add_hull_strength/: down.sql  up.sql
migrations/2020-07-25-214549_rearrange_robot_table/: down.sql  up.sql
migrations/2020-07-27-032636_add_pursuit_details/: down.sql  up.sql
migrations/2020-07-28-203320_add_attack_from_column/: down.sql  up.sql
migrations/2020-08-01-054243_add_columns_for_recording_attacks/: down.sql  up.sql
src/: lib.rs  schema.rs
src/db/: client.rs  mod.rs
src/grid/: coords.rs  edge.rs  grid.rs  mod.rs  utils.rs
src/grid/utils/: mod.rs  traversal.rs
src/robot/: mod.rs  robot.rs
src/server/: mod.rs  server.rs  ws.rs
src/utils/: mod.rs
src/valuable/: mod.rs
(+19 files in other folders)
