[package]
name = "ares"
version = "0.1.0"
authors = ["Digant C Kasundra <diggyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"clap" = "2.33.1"
"ctrlc" = "3.1.5"
"derivative" = "2.1.1"
"diesel" = { version = "1.4.5", features = ["postgres"] }
"dotenv" = "0.15.0"
"postgres" = "0.17.4"
"rand" = "0.7.3"

[dev-dependencies]
mockall = "0.7.1"