[package]
name = "ares"
version = "0.1.0"
authors = ["Digant C Kasundra <diggyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"clap" = "2.33.1"
"ctrlc" = "3.1.6"
"derivative" = "2.1.1"
"diesel" = { version = "1.4.5", features = ["postgres", "serde_json"] }
"dotenv" = "0.15.0"
"enum-display-derive" = "0.1.0"
"postgres" = "0.17.5"
"rand" = "0.7.3"
"serde" = { version = "1.0.114",features = ["derive"]}
"serde_json" = "1.0.57"
"serde_repr" = "0.1.6"
"tokio" = {version = "0.2.22", features = ["full"]}
"futures" = { version = "0.3.5"}
"warp" = "0.2.4"

[dev-dependencies]
mockall = "0.7.2"
